@@ -12,15 +12,20 @@ import net.neoforged.neoforge.common.ModConfigSpec;
 import java.io.BufferedReader;
 import java.io.InputStreamReader;
 import java.net.HttpURLConnection;
-import java.net.URL;
+import java.net.URI;
+import java.nio.charset.StandardCharsets;
 import java.util.ArrayList;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
+import java.util.function.Supplier;
 import java.util.regex.Pattern;
 
 @EventBusSubscriber(modid = CFMain.MODID, bus = EventBusSubscriber.Bus.MOD)
-public class CFConfig {
+public final class CFConfig {
+
+    private static final String GITHUB_CONFIG_BASE_URL =
+            "https://raw.githubusercontent.com/Porting-Dead-Mods/Cable-Facades/refs/heads/1.21.1/configs/";
 
     private static final ModConfigSpec.Builder BUILDER = new ModConfigSpec.Builder();
 
@@ -59,272 +64,255 @@ public class CFConfig {
     private static final ModConfigSpec.ConfigValue<List<? extends String>> HIDDEN_WHEN_FACADED = BUILDER.comment("List of blocks that should not render when covered by a facade. Supports '*' as a wildcard.")
             .defineListAllowEmpty("hidden_when_facaded", List.of(), () -> "", CFConfig::validateBlockName);
 
+    private static final ModConfigSpec.ConfigValue<List<? extends String>> SCALE_UP_BLOCKS = BUILDER.comment("List of blocks that need a slight scale-up when facaded (e.g. Create mod blocks). Supports '*' as a wildcard.")
+            .defineListAllowEmpty("scale_up_blocks", List.of("*create*"), () -> "", CFConfig::validateBlockName);
+
     private static final ModConfigSpec.BooleanValue CONSUME_FACADE = BUILDER.comment("Whether the facade should be consumed when placed.")
             .define("consumeFacade", true);
 
     static final ModConfigSpec SPEC = BUILDER.build();
 
-    private static final Map<Block, Boolean> allowedBlocks = new HashMap<>();
-    private static final Map<Block, Boolean> disallowedBlocks = new HashMap<>();
-    private static final Map<Block, Boolean> zFightingBlocks = new HashMap<>();
-    private static final Map<Block, Boolean> hiddenBlocks = new HashMap<>();
-    private static final List<Pattern> blockPatterns = new ArrayList<>();
-    private static final List<Pattern> notAllowedBlockPatterns = new ArrayList<>();
-    private static final List<Pattern> zFightingPatterns = new ArrayList<>();
-    private static final List<Pattern> hiddenBlockPatterns = new ArrayList<>();
-    public static boolean consumeFacade;
-    public static int configVersion;
-    private static int lastConfigVersion;
-    private static boolean autoUpdateConfig;
+    private static final BlockRuleSet ALLOWED_RULES = new BlockRuleSet();
+    private static final BlockRuleSet DISALLOWED_RULES = new BlockRuleSet();
+    private static final BlockRuleSet Z_FIGHTING_RULES = new BlockRuleSet();
+    private static final BlockRuleSet HIDDEN_RULES = new BlockRuleSet();
+    private static final BlockRuleSet SCALE_UP_RULES = new BlockRuleSet();
+
+    public static boolean consumeFacade = true;
+    public static int configVersion = 1;
+    private static int lastConfigVersion = 0;
+    private static boolean autoUpdateConfig = true;
+
+    private CFConfig() {
+    }
 
     private static boolean validateBlockName(final Object obj) {
-        if (obj instanceof String blockName) {
-            if (blockName.contains("*")) {
+        if (!(obj instanceof String blockName)) {
+            return false;
+        }
+        if (blockName.isBlank()) {
+            return false;
+        }
+
+        if (blockName.contains("*")) {
+            if (blockName.equals("*")) {
                 return true;
             }
-            return BuiltInRegistries.BLOCK.containsKey(ResourceLocation.parse(blockName));
+
+            String sanitized = blockName.replace('*', 'a');
+            if (sanitized.contains(":")) {
+                try {
+                    ResourceLocation.parse(sanitized);
+                    return true;
+                } catch (Exception ignored) {
+                    return false;
+                }
+            }
+
+            return !sanitized.isBlank();
         }
-        return false;
+
+        String[] parts = blockName.split(":", 2);
+        if (parts.length != 2 || parts[0].isBlank() || parts[1].isBlank()) {
+            return false;
+        }
+
+        try {
+            ResourceLocation.parse(blockName.replace('*', 'a'));
+            return true;
+        } catch (Exception ignored) {
+            return false;
+        }
     }
 
     public static List<String> downloadListFromGithub(String listType) {
-        String githubBaseUrl = "https://raw.githubusercontent.com/Porting-Dead-Mods/Cable-Facades/refs/heads/1.21.1/configs/";
         String filename = switch (listType.toLowerCase()) {
             case "whitelist" -> "whitelist.txt";
             case "blacklist" -> "blacklist.txt";
             case "zfighting" -> "zfighting.txt";
-            case "hidden_facaded" -> "hidden_facaded.txt";
             default -> throw new IllegalArgumentException("Invalid list type: " + listType);
         };
-        String githubUrl = githubBaseUrl + filename;
 
-        List<String> downloadedList = new ArrayList<>();
+        List<String> downloaded = new ArrayList<>();
 
         try {
-            URL url = new URL(githubUrl);
-            HttpURLConnection connection = (HttpURLConnection) url.openConnection();
+            HttpURLConnection connection = (HttpURLConnection) URI.create(GITHUB_CONFIG_BASE_URL + filename).toURL().openConnection();
             connection.setRequestMethod("GET");
             connection.setConnectTimeout(5000);
             connection.setReadTimeout(5000);
+            connection.setInstanceFollowRedirects(true);
+            connection.setRequestProperty("Accept", "text/plain");
+            connection.setRequestProperty("User-Agent", CFMain.MODID + "/" + CFMain.MODID);
 
-            if (connection.getResponseCode() == 200) {
-                try (BufferedReader reader = new BufferedReader(new InputStreamReader(connection.getInputStream()))) {
-                    String line;
-                    while ((line = reader.readLine()) != null) {
-                        if (!line.isBlank() && !line.startsWith("#")) {
-                            downloadedList.add(line.trim());
-                        }
+            int responseCode = connection.getResponseCode();
+            if (responseCode != HttpURLConnection.HTTP_OK) {
+                CFMain.LOGGER.warn("Failed to download {}. HTTP code: {}", listType, responseCode);
+                return downloaded;
+            }
+
+            try (BufferedReader reader = new BufferedReader(new InputStreamReader(connection.getInputStream(), StandardCharsets.UTF_8))) {
+                String line;
+                while ((line = reader.readLine()) != null) {
+                    String trimmed = line.trim();
+                    if (!trimmed.isEmpty() && !trimmed.startsWith("#")) {
+                        downloaded.add(trimmed);
                     }
                 }
-                CFMain.LOGGER.info("Downloaded {} {} blocks from GitHub", downloadedList.size(), listType);
-            } else {
-                CFMain.LOGGER.warn("Failed to download {}. HTTP code: {}", listType, connection.getResponseCode());
             }
+
+            CFMain.LOGGER.info("Downloaded {} {} blocks from GitHub", downloaded.size(), listType);
         } catch (Exception e) {
             CFMain.LOGGER.warn("Error downloading {}: {}. Using local config only.", listType, e.getMessage());
         }
 
-        return downloadedList;
+        return downloaded;
     }
 
     @SubscribeEvent
     static void onLoad(final ModConfigEvent event) {
+        if (event.getConfig().getSpec() != SPEC) {
+            return;
+        }
+
         consumeFacade = CONSUME_FACADE.get();
         configVersion = CONFIG_VERSION.get();
         lastConfigVersion = LAST_CONFIG_VERSION.get();
         autoUpdateConfig = AUTO_UPDATE_CONFIG.get();
 
-        allowedBlocks.clear();
-        disallowedBlocks.clear();
-        zFightingBlocks.clear();
-        hiddenBlocks.clear();
-        blockPatterns.clear();
-        notAllowedBlockPatterns.clear();
-        zFightingPatterns.clear();
-        hiddenBlockPatterns.clear();
+        List<String> configuredAllowedBlocks = mergeConfiguredAllowedBlocks();
 
-        List<String> currentBlocks = new ArrayList<>(BLOCK_STRINGS.get());
-        List<String> addedBlocks = new ArrayList<>(ADDED_BLOCK_STRINGS.get());
-        List<String> lastVersionBlocks = new ArrayList<>(LAST_VERSION_BLOCKS.get());
+        ALLOWED_RULES.reload(
+                configuredAllowedBlocks,
+                autoUpdateConfig ? downloadListFromGithub("whitelist") : List.of(),
+                CableFacadesAPI::getAdditionalAllowedBlocks
+        );
+        DISALLOWED_RULES.reload(
+                copyStrings(NOT_ALLOWED_BLOCK_STRINGS.get()),
+                autoUpdateConfig ? downloadListFromGithub("blacklist") : List.of(),
+                CableFacadesAPI::getAdditionalDisallowedBlocks
+        );
+        Z_FIGHTING_RULES.reload(
+                copyStrings(Z_FIGHTING.get()),
+                autoUpdateConfig ? downloadListFromGithub("zfighting") : List.of(),
+                CableFacadesAPI::getAdditionalZFightingBlocks
+        );
+        HIDDEN_RULES.reload(
+                copyStrings(HIDDEN_WHEN_FACADED.get()),
+                List.of(),
+                CableFacadesAPI::getAdditionalHiddenBlocks
+        );
+        SCALE_UP_RULES.reload(
+                copyStrings(SCALE_UP_BLOCKS.get()),
+                List.of(),
+                () -> List.of()
+        );
+    }
 
-        if (autoUpdateConfig && configVersion > lastConfigVersion) {
-            CFMain.LOGGER.info("Config version changed from {} to {}. Merging changes...", lastConfigVersion, configVersion);
+    private static List<String> mergeConfiguredAllowedBlocks() {
+        List<String> currentBlocks = copyStrings(BLOCK_STRINGS.get());
+        List<String> addedBlocks = copyStrings(ADDED_BLOCK_STRINGS.get());
 
-            if (lastConfigVersion > 0) {
-                LAST_VERSION_BLOCKS.set(new ArrayList<>(currentBlocks));
-            }
-
-            for (String block : addedBlocks) {
-                if (!currentBlocks.contains(block)) {
-                    currentBlocks.add(block);
-                }
-            }
-
-            BLOCK_STRINGS.set(currentBlocks);
-            ADDED_BLOCK_STRINGS.set(new ArrayList<>());
-            LAST_CONFIG_VERSION.set(configVersion);
-
-            CFMain.LOGGER.info("Merged {} new blocks into config", addedBlocks.size());
+        if (!autoUpdateConfig || configVersion <= lastConfigVersion) {
+            return currentBlocks;
         }
 
+        CFMain.LOGGER.info("Config version changed from {} to {}. Merging changes...", lastConfigVersion, configVersion);
 
-        List<String> combinedBlockStrings = new ArrayList<>(currentBlocks);
-        List<String> combinedNotAllowedBlockStrings = new ArrayList<>(NOT_ALLOWED_BLOCK_STRINGS.get());
-        List<String> combinedZFightingStrings = new ArrayList<>(Z_FIGHTING.get());
-        List<String> combinedHiddenStrings = new ArrayList<>(HIDDEN_WHEN_FACADED.get());
-
-        if(autoUpdateConfig){
-            List<String> downloadedBlockStrings = new ArrayList<>();
-            List<String> downloadedNotAllowedBlockStrings = new ArrayList<>();
-            List<String> downloadedZFightingStrings = new ArrayList<>();
-            List<String> downloadedHiddenStrings = new ArrayList<>();
-
-            try {
-                downloadedBlockStrings = downloadListFromGithub("whitelist");
-                downloadedNotAllowedBlockStrings = downloadListFromGithub("blacklist");
-                downloadedZFightingStrings = downloadListFromGithub("zfighting");
-                downloadedHiddenStrings = downloadListFromGithub("hidden_facaded");
-            } catch (Exception e) {
-                CFMain.LOGGER.warn("Error downloading from GitHub: {}", e.getMessage());
-            }
-
-            combinedBlockStrings.addAll(downloadedBlockStrings);
-            combinedNotAllowedBlockStrings.addAll(downloadedNotAllowedBlockStrings);
-            combinedZFightingStrings.addAll(downloadedZFightingStrings);
-            combinedHiddenStrings.addAll(downloadedHiddenStrings);
+        if (lastConfigVersion > 0) {
+            LAST_VERSION_BLOCKS.set(new ArrayList<>(currentBlocks));
         }
 
-        combinedBlockStrings.addAll(CableFacadesAPI.getAdditionalAllowedBlocks());
-        combinedNotAllowedBlockStrings.addAll(CableFacadesAPI.getAdditionalDisallowedBlocks());
-        combinedZFightingStrings.addAll(CableFacadesAPI.getAdditionalZFightingBlocks());
-        combinedHiddenStrings.addAll(CableFacadesAPI.getAdditionalHiddenBlocks());
-
-        for (String blockName : combinedBlockStrings) {
-            if (blockName.contains("*")) {
-                String regex = blockName.replace("*", ".*");
-                blockPatterns.add(Pattern.compile(regex));
-            } else {
-                Block block = BuiltInRegistries.BLOCK.get(ResourceLocation.parse(blockName));
-                if (block != null) {
-                    allowedBlocks.put(block, true);
-                }
+        int mergedCount = 0;
+        for (String block : addedBlocks) {
+            if (!currentBlocks.contains(block)) {
+                currentBlocks.add(block);
+                mergedCount++;
             }
         }
 
-        for (String blockName : combinedNotAllowedBlockStrings) {
-            if (blockName.contains("*")) {
-                String regex = blockName.replace("*", ".*");
-                notAllowedBlockPatterns.add(Pattern.compile(regex));
-            } else {
-                Block block = BuiltInRegistries.BLOCK.get(ResourceLocation.parse(blockName));
-                if (block != null) {
-                    disallowedBlocks.put(block, true);
-                }
-            }
-        }
+        BLOCK_STRINGS.set(currentBlocks);
+        ADDED_BLOCK_STRINGS.set(new ArrayList<>());
+        LAST_CONFIG_VERSION.set(configVersion);
+        CFMain.LOGGER.info("Merged {} new blocks into config", mergedCount);
+        return currentBlocks;
+    }
 
-        for (String blockName : combinedZFightingStrings) {
-            if (blockName.contains("*")) {
-                String regex = blockName.replace("*", ".*");
-                zFightingPatterns.add(Pattern.compile(regex));
-            } else {
-                Block block = BuiltInRegistries.BLOCK.get(ResourceLocation.parse(blockName));
-                if (block != null) {
-                    zFightingBlocks.put(block, true);
-                }
-            }
-        }
-
-        for (String blockName : combinedHiddenStrings) {
-            if (blockName.contains("*")) {
-                String regex = blockName.replace("*", ".*");
-                hiddenBlockPatterns.add(Pattern.compile(regex));
-            } else {
-                Block block = BuiltInRegistries.BLOCK.get(ResourceLocation.parse(blockName));
-                if (block != null) {
-                    hiddenBlocks.put(block, true);
-                }
-            }
-        }
+    private static List<String> copyStrings(List<? extends String> source) {
+        return new ArrayList<>(source);
     }
 
     public static boolean isBlockAllowed(Block targetBlock) {
-        Boolean cached = allowedBlocks.get(targetBlock);
-        if (cached != null) {
-            return cached;
-        }
-
-        ResourceLocation blockId = BuiltInRegistries.BLOCK.getKey(targetBlock);
-        if (blockId != null) {
-            String blockIdString = blockId.toString();
-            for (Pattern pattern : blockPatterns) {
-                if (pattern.matcher(blockIdString).matches()) {
-                    allowedBlocks.put(targetBlock, true);
-                    return true;
-                }
-            }
-        }
-        allowedBlocks.put(targetBlock, false);
-        return false;
+        return ALLOWED_RULES.matches(targetBlock);
     }
 
     public static boolean isBlockDisallowed(Block targetBlock) {
-        Boolean cached = disallowedBlocks.get(targetBlock);
-        if (cached != null) {
-            return cached;
-        }
-
-        ResourceLocation blockId = BuiltInRegistries.BLOCK.getKey(targetBlock);
-        if (blockId != null) {
-            String blockIdString = blockId.toString();
-            for (Pattern pattern : notAllowedBlockPatterns) {
-                if (pattern.matcher(blockIdString).matches()) {
-                    disallowedBlocks.put(targetBlock, true);
-                    return true;
-                }
-            }
-        }
-        disallowedBlocks.put(targetBlock, false);
-        return false;
+        return DISALLOWED_RULES.matches(targetBlock);
     }
 
     public static boolean canPatchZFighting(Block targetBlock) {
-        Boolean cached = zFightingBlocks.get(targetBlock);
-        if (cached != null) {
-            return cached;
-        }
-
-        ResourceLocation blockId = BuiltInRegistries.BLOCK.getKey(targetBlock);
-        if (blockId != null) {
-            String blockIdString = blockId.toString();
-            for (Pattern pattern : zFightingPatterns) {
-                if (pattern.matcher(blockIdString).matches()) {
-                    zFightingBlocks.put(targetBlock, true);
-                    return true;
-                }
-            }
-        }
-        zFightingBlocks.put(targetBlock, false);
-        return false;
+        return Z_FIGHTING_RULES.matches(targetBlock);
     }
 
     public static boolean shouldHideWhenFacaded(Block targetBlock) {
-        Boolean cached = hiddenBlocks.get(targetBlock);
-        if (cached != null) {
-            return cached;
-        }
+        return HIDDEN_RULES.matches(targetBlock);
+    }
 
-        ResourceLocation blockId = BuiltInRegistries.BLOCK.getKey(targetBlock);
-        if (blockId != null) {
-            String blockIdString = blockId.toString();
-            for (Pattern pattern : hiddenBlockPatterns) {
-                if (pattern.matcher(blockIdString).matches()) {
-                    hiddenBlocks.put(targetBlock, true);
-                    return true;
-                }
+    public static boolean isScaleUpBlock(Block targetBlock) {
+        return SCALE_UP_RULES.matches(targetBlock);
+    }
+
+    private static final class BlockRuleSet {
+        private final Map<Block, Boolean> cache = new HashMap<>();
+        private final List<Pattern> patterns = new ArrayList<>();
+
+        private void reload(List<String> configuredEntries, List<String> downloadedEntries, Supplier<List<String>> apiEntries) {
+            cache.clear();
+            patterns.clear();
+
+            List<String> combinedEntries = new ArrayList<>(configuredEntries);
+            combinedEntries.addAll(downloadedEntries);
+            combinedEntries.addAll(apiEntries.get());
+
+            for (String entry : combinedEntries) {
+                register(entry);
             }
         }
-        hiddenBlocks.put(targetBlock, false);
-        return false;
+
+        private void register(String blockName) {
+            if (blockName.contains("*")) {
+                patterns.add(Pattern.compile(blockName.replace("*", ".*")));
+                return;
+            }
+
+            try {
+                Block block = BuiltInRegistries.BLOCK.get(ResourceLocation.parse(blockName));
+                if (block != null) {
+                    cache.put(block, true);
+                }
+            } catch (Exception e) {
+                CFMain.LOGGER.warn("Ignoring invalid block config entry '{}': {}", blockName, e.getMessage());
+            }
+        }
+
+        private boolean matches(Block block) {
+            Boolean cached = cache.get(block);
+            if (cached != null) {
+                return cached;
+            }
+
+            ResourceLocation blockId = BuiltInRegistries.BLOCK.getKey(block);
+            if (blockId != null) {
+                String blockIdString = blockId.toString();
+                for (Pattern pattern : patterns) {
+                    if (pattern.matcher(blockIdString).matches()) {
+                        cache.put(block, true);
+                        return true;
+                    }
+                }
+            }
+
+            cache.put(block, false);
+            return false;
+        }
     }
 }
